Need to fix overflow on desktop for cart table

--- a/app/assets/stylesheets/components/_table.scss
+++ b/app/assets/stylesheets/components/_table.scss
@@ -14,6 +14,9 @@
      vertical-align: middle;
 }
 
+.table th {
+    padding-bottom: 0;
+}
 .th-font {
     // font-family: "Roboto", "sans-serif";
     font-family: "Frank Ruhl Libre", "serif";
